@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: JavaThreadLoadTclBlend.java,v 1.1 2002/07/20 05:36:54 mdejong Exp $
+ * RCS: @(#) $Id: JavaThreadLoadTclBlend.java,v 1.2 2002/07/22 09:27:20 mdejong Exp $
  */
 
 package tests;
@@ -19,16 +19,28 @@ public class JavaThreadLoadTclBlend implements Runnable {
     final boolean debug = false;
 
     public void run() {
+        Interp interp = null;
+
         try {
             if (debug)
                 System.out.println("run()");
-            Interp interp = new Interp();
+            interp = new Interp();
             interp.eval("expr {1 + 2}");
             String num = interp.getResult().toString();
             if (!num.equals("3"))
                 System.exit(-1);
         } catch (Exception e) {
             e.printStackTrace(System.err);
+        } finally {
+            if (interp != null) {
+                if (debug) {
+                    System.out.println("now to dispose of interp");
+                }
+                interp.dispose();
+                if (debug) {
+                    System.out.println("interp dispose finished");
+                }
+            }
         }
         if (debug)
             System.out.println("run() finished");
